--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,17 +2,17 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Stergios Misios
     - name: Date of Birth
-      value: 14th March 1879
+      value: 31 Jan 1980
     - name: Languages
-      value: English, German
+      value: Greek, English, German
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
+      institution: Max Planck Institute for Meteorology
       year: 1905
       description:
         - Description 1.
