--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -8,90 +8,42 @@
     - name: Languages
       value: Greek, English, German
 
-- title: Education
+- title: Professional Positions
   type: time_table
   contents:
-    - title: PhD
-      institution: Max Planck Institute for Meteorology
-      year: 1905
+    - title: Assistant Researcher
+      institution: Academy of Athens
+      year: 2024
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
 
-- title: Experience
-  type: time_table
-  contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
+    - title: Marie Curie Fellow
+      institution: National Observatory of Athens
+      year: 2019-2024
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
+    - title: Postdoctoral research associate
+      institution: University of Oxford
       year: 1911 - 1917
       description:
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Education
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: Doctor of Philosophy in Natural Sciences
+      institution: Max Planck Institute for Meteorology
+      year: 2012
+      description:
+      - Influences of the 11-yr solar cycle on the tropical atmosphere and oceans
 
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
+    - title: Master of Science
+      institution: Aristotle University of Thessaloniki
+      year: 2007
+      description:
+        
+        
+    - title: Diploma in Physics
+      institution: Aristotle University of Thessaloniki
+      year: 2004
+      description:
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
 
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+
