--- a/_config.yml
+++ b/_config.yml
@@ -122,8 +122,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name:  # blog_name will be displayed in your blog page
-# al-folio to enable
+blog_name: al-folio # blog_name will be displayed in your blog page
+#  to enable
 blog_description: a simple whitespace theme for academics
 permalink: /blog/:year/:title/
 
